@@ -234,12 +234,14 @@ class Entry(gtk.Entry, WidgetMixinSupportValidation):
     def read(self):
         mode = self._entry_mode
         if mode == ENTRY_MODE_TEXT:
-            return self.get_text()
+            value = self.get_text()
         elif mode == ENTRY_MODE_DATA:
-            return self._current_object
+            value = self._current_object
         else:
             raise AssertionError
 
+        return self.validate_data(value)
+    
     def update(self, data):
         if data is ValueUnset or data is None:
             self.set_text("")
