@@ -1,3 +1,15 @@
+2005-10-14  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/interfaces.py:
+	* kiwi/proxies.py:
+	* kiwi/ui/widgets/combobox.py:
+	* kiwi/ui/widgets/entry.py:
+	* kiwi/ui/widgets/proxy.py:
+	* kiwi/ui/widgets/spinbutton.py:
+	Do validation in read, simplifies the interaction between the proxy 
+	and the widgets.
+	Add some basic documentation to the proxy/validation "interfaces".
+
 2005-10-13  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/proxies.py:
